[metadata]
name = fuel_neutron
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
neutron.service_plugins =
    fuel = fuel_neutron.fuel_plugin:FuelPlugin
neutron.db.alembic_migrations =
    fuel = fuel_neutron.db.migration:alembic_migrations


[files]
packages =
    fuel_neutron

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fuel_neutron/locale
domain = fuel_neutron

[update_catalog]
domain = fuel_neutron
output_dir = fuel_neutron/locale
input_file = fuel_neutron/locale/fuel_neutron.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fuel_neutron/locale/fuel_neutron.pot
